--- a/components/Netdecoder/CMakeLists.txt
+++ b/components/Netdecoder/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10.2)
-project(netdecoder LANGUAGES CXX)
+project(NtaNetDecoder LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
