--- a/applications/capture/CMakeLists.txt
+++ b/applications/capture/CMakeLists.txt
@@ -2,20 +2,7 @@ cmake_minimum_required(VERSION 3.11)
 
 project(nta_capture LANGUAGES C CXX)
 
-add_executable(${PROJECT_NAME} main.cpp)
-target_link_libraries(${PROJECT_NAME} PRIVATE Poco::Util NtaUtil )
+file(GLOB_RECURSE CPP_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
 
-# set_target_properties (${PROJECT_NAME} PROPERTIES
-#     INTERFACE_COMPILE_FEATURES "c_std_99")
-
-# target_compile_features(${PROJECT_NAME} INTERFACE c_std_17 cxx_std_17)
-
-#------------------------------------------------------------------
-#
-#------------------------------------------------------------------
-
-include(GNUInstallDirs)
-install(TARGETS ${PROJECT_NAME}
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-)
+add_executable(${PROJECT_NAME} ${CPP_FILES})
+target_link_libraries(${PROJECT_NAME} PRIVATE Poco::Util NtaUtil NtaHandlers )
