--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,16 +13,19 @@ project(NetWorkAnalyzer VERSION 0.0.0 LANGUAGES CXX)
 ###############################################################################
 #                         Cmake additional scripts
 ###############################################################################
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/components/handlers/cmake/FindPCAP.cmake")
+file(GLOB CMAKE_FILES ${CMAKE_SOURCE_DIR}/cmake/*.cmake)
+foreach(ARG ${CMAKE_FILES})
+    list(APPEND CMAKE_MODULE_PATH "${ARG}")
+endforeach()
 
 ###############################################################################
 #                               3rdParty
 ###############################################################################
 FetchContent_Declare(
-  ThriftPfrSerializer
+  TPfr
   GIT_REPOSITORY https://github.com/Humminghead/ThriftPfrSerializer.git
-  GIT_TAG 1.0.3
+  # GIT_TAG 1.0.4
+  GIT_TAG 29562dc2bd15039f8c8e230cd1aface68c2f31bd
 )
 
 FetchContent_Declare(
@@ -32,7 +35,7 @@ FetchContent_Declare(
 )
 
 FetchContent_MakeAvailable(
-    ThriftPfrSerializer
+    TPfr
     Poco)
 
 ###############################################################################
@@ -46,6 +49,7 @@ list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
 add_subdirectory(${CMAKE_SOURCE_DIR}/components/Netdecoder)
 add_subdirectory(${CMAKE_SOURCE_DIR}/components/Handlers)
 add_subdirectory(${CMAKE_SOURCE_DIR}/components/Util)
+add_subdirectory(${CMAKE_SOURCE_DIR}/models)
 
 ###############################################################################
 #                             Applications
